# miniclap

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: simple.rs
miniclap_derive/: Cargo.toml
miniclap_derive/src/: lib.rs
smallclap_derive/: Cargo.toml
smallclap_derive/src/: lib.rs
src/: error.rs  lib.rs  parse.rs
