[package]
name = "miniclap"
version = "0.1.0"
authors = ["Jitu Das <jitudas@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Minimalist Command-Line Argument Parser for Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miniclap_derive = { path = "./miniclap_derive" }

[workspace]
members = ["miniclap_derive"]
